# reflex-template

./: .ghc.environment.x86_64-darwin-8.6.5  .gitignore  default.nix  stack.yaml
api/: api.cabal
api/api/: api.cabal
backend/: backend.cabal
backend/src/: Backend.hs
backend/src-bin/: main.hs
common/: common.cabal
common/src/Common/: Route.hs  Types.hs
frontend/: frontend.cabal
frontend/src/: Css.hs  Frontend.hs  Utils.hs
frontend/src-bin/: main.hs
frontend/src/Frontend/: Utils.hs
frontend/src/Route/: NotFound.hs  Root.hs  Test.hs
static/: style.css
