name: api
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  ghc-options:
    -Wall
    -Wno-name-shadowing
    -Wno-unused-do-bind
    -F -pgmF=record-dot-preprocessor

  default-extensions:
    TypeFamilies
    PolyKinds
  
  exposed-modules:
    API

  build-depends:
      base
    , common
    , obelisk-route
    , mtl
    , text
    , record-hasfield
    , servant
    , servant-server
    , swagger2
    , servant-swagger-ui
  
