name: api
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  ghc-options:
    -Wall
    -Wno-name-shadowing
    -Wno-unused-do-bind
    -fplugin=RecordDotPreprocessor

  default-extensions:
    TypeFamilies
    PolyKinds
    DuplicateRecordFields
    TypeApplications
    FlexibleContexts
    DataKinds
    MultiParamTypeClasses
    TypeSynonymInstances
    FlexibleInstances
    TypeOperators
  
  exposed-modules:
    API

  build-depends:
      base
    , common
    , obelisk-route
    , mtl
    , text
    , record-dot-preprocessor
    , record-hasfield
    , servant
    , servant-server
    , swagger2
    , servant-swagger-ui
  
