name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  if impl(ghcjs)
    buildable: False
  hs-source-dirs: src
  
  ghc-options:
    -Wall
    -Wno-name-shadowing
    -Wno-unused-do-bind
    -F -pgmF=record-dot-preprocessor

  exposed-modules:
    Backend

  build-depends:
      base
    , common
    , frontend
    , api
    , obelisk-backend
    , obelisk-route
    , record-hasfield

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , obelisk-backend
