name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  ghc-options:
    -Wall
    -Wno-name-shadowing
    -Wno-unused-do-bind
    -- -fplugin=RecordDotPreprocessor

  default-extensions:
    DataKinds
    TypeFamilies
    LambdaCase
    OverloadedStrings
    DuplicateRecordFields
    TypeApplications
    FlexibleContexts
    DataKinds
    MultiParamTypeClasses
    TypeSynonymInstances
    FlexibleInstances

  exposed-modules:
    Common.Api
    Common.Route
    Common.Types

  build-depends:
      base
    , obelisk-route
    , mtl
    , text
    , record-hasfield
    , record-dot-preprocessor
    , clay
  
