name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  ghc-options:
    -Wall
    -Wno-name-shadowing
    -Wno-unused-do-bind
    -F -pgmF=record-dot-preprocessor
  
  default-extensions:
    DataKinds
    OverloadedStrings
    LambdaCase

  exposed-modules:
    Frontend
  
  build-depends:
      base
    , common
    , obelisk-frontend
    , obelisk-route
    , reflex-dom
    , obelisk-executable-config-lookup
    , obelisk-generated-static
    , text
    , record-hasfield

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends:
      base
    , common
    , obelisk-frontend
    , obelisk-route
    , reflex-dom
    , obelisk-generated-static
    , frontend
  ghc-options: -threaded
  if os(darwin)
     ghc-options: -dynamic
