name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  ghc-options:
    -Wall
    -Wno-name-shadowing
    -Wno-unused-do-bind
    -- -Wno-redundant-constraints
    -F -pgmF=record-dot-preprocessor
  
  default-extensions:
    DataKinds
    OverloadedStrings
    LambdaCase
    FlexibleContexts
    RankNTypes

  exposed-modules:
    Frontend

  other-modules:
    Frontend.Utils
  
  build-depends:
      base
    , common
    , obelisk-frontend
    , obelisk-route
    , reflex-dom
    , obelisk-executable-config-lookup
    , obelisk-generated-static
    , text
    , lens
    , record-hasfield
    , clay

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends:
      base
    , obelisk-frontend
    , obelisk-route
    , reflex-dom
    , obelisk-generated-static
    , obelisk-run
    , frontend
  ghc-options: -threaded
  if os(darwin)
     ghc-options: -dynamic
